[package]
name = "rtp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtp-rs = "*"
stun = "*"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
# ossl102
openssl = { version = "*", features = ["v102"] }
webrtc-util = "*"
srtp = "*"