[package]
name = "rtp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtp-rs = "0.6.0"
stun = "*"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
# ossl102
openssl = { version = "*", features = [] }
srtp2-sys = {version="3.0.2", features = []}
